Sat Nov 27 14:34:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

	* utils/examples/mfc/client.cpp:
	  Fixed problems with use of iostreams for
	  ACE_LACKS_IOSTREAM_TOTALLY builds (VxWorks DIAB).

Sat Nov 27 14:26:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

	* utils/performance-tests/Cubit/TAO/MT_Cubit/server.cpp:
	  Fixed problems with use of iostreams for
	  ACE_LACKS_IOSTREAM_TOTALLY builds (VxWorks DIAB).

Sat Nov 27 14:19:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

	* utils/catior/catior.cpp:
	  Fixed incompatibility with ACE_LACKS_IOSTREAM_TOTALLY builds 
	  (VxWorks DIAB).

Fri Nov 26 17:49:48 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/tests/Log/Basic_Log_Test/run_test.pl:

	  New file.

Fri Nov 26 17:53:13 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* TAO-INSTALL.html:

	  Removed references to TAOACE.dsw. They are no longer available
	  in the repository.

Fri Nov 26 14:19:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/ECG_Complex_Address_Server.cpp:
          Fixed compile problem

Fri Nov 26 10:28:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1535_Regression/Bug_1535_Regression.mpc:
          Add minimum_corba as base project, instead of adding
          avoids += minimum_corba, the base does just the same and
          make it a little bit better maintainable in the future

Fri Nov 26 09:58:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * orbsvcs/orbsvcs/Event/ECG_Complex_Address_server.cpp:
	  Changed use of iostreams to ACE_DEBUG because of compile problems
	  with ACE_LACKS_IOSTREAMS_TOTALLY (VxWorks).

Fri Nov 26 09:43:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO-INSTALL.html:
          Fixed link to acedefaults.mpb

Fri Nov 26 07:23:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Log/Basic_Log_Test/Basic_Log_Test.cpp:
          Fixed compile problem in emulated exception builds
